Invalid api url returns 404